--- a/docfx_project/site/home/techguides/create-publish-template.html
+++ b/docfx_project/site/home/techguides/create-publish-template.html
@@ -82,7 +82,7 @@
 <h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 
 <p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Further anybody will be able to create an environment with the baselined version of the product.</p>
-<h2 id="set-up-the-factory-prerequisites">Set up the Factory prerequisites:</h2>
+<h1 id="prerequisites-to-set-up-the-factory">Prerequisites to set up the Factory:</h1>
 <h1 id="1-check-metadata-on-the-portal">1. Check Metadata on the portal</h1>
 <ul>
 <li>Login to the portal with your credentials.</li>
@@ -163,8 +163,21 @@
 <h1 id="8-see-the-new-environment">8. See the new environment</h1>
 <p>Expand the left side menu and click on &#39;Environments&#39;. You will see the enviroment that was created following the successful factory run:</p>
 <p><img src="images/factory-run-environment.png" alt=""></p>
-<h2 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h2>
-<p>Click on the newly created environment. On the right side of the page click on &#39;Save as a new template&#39;. Type in the Template Name and a brief description. </p>
+<h1 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h1>
+<p>There are two alternatives to Create and Publish the new Template after the Successful Run:</p>
+<ol>
+<li>Automated trigger </li>
+<li>save the New Template from the Factory Run </li>
+<li>go to Dashboard</li>
+<li>on the Factory Run click on &#39;Actions&#39; and select from the drop-down &#39;Create New Template</li>
+</ol>
+<p><img src="./images/run-factory-completed.png" alt=""></p>
+<ol>
+<li>Manual trigger </li>
+<li>click on the newly created environment</li>
+<li>on the right side of the page click on &#39;Save as a new template&#39;</li>
+<li>type in the Template Name and a brief description </li>
+</ol>
 <p><img src="images/save-new-template.png" alt=""></p>
 <p>To see the new template, go to the Templates Catalogue tab. Your template is now available in your templates list.</p>
 <p><img src="images/new-template.png" alt=""></p>
