--- a/docfx_project/site/home/techguides/factories.html
+++ b/docfx_project/site/home/techguides/factories.html
@@ -150,6 +150,15 @@
 <li>You can easily delete a factory by clicking the <strong>delete</strong> button.</li>
 <li>The products, stages and streams created before can be re-used.</li>
 </ul>
+<h2 id="factory-scheduler">Factory Scheduler</h2>
+<p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily.</p>
+<ul>
+<li>the scheduler can be configured to run one time per day</li>
+<li>if the factory run test is successful you can choose to stop/ or keep running the T24 environment</li>
+<li>the same applies for the Factory Run Failure scenario
+The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options are aimed to be used for costs purposes.
+<img src="images/factory-scheduler.png" alt=""></li>
+</ul>
 <p><br></p>
               <hr>
               
