--- a/docfx_project/site/home/faq.html
+++ b/docfx_project/site/home/faq.html
@@ -98,6 +98,15 @@
 <li><strong>Who will handle customers’ queries/issues for Deployment Platform?</strong></li>
 </ul>
 <p>Sales queries will be handled via the Temenos SaaS (CloudPlatformSupport@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
+<ul>
+<li><strong>Data and Security Considerations</strong></li>
+</ul>
+<p>The Temenos Continuous Deployment is for <strong>non-production use only</strong>, unless otherwise stated.  No &#39;personal data&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data should be stored on any Environment.</p>
+<p>•   Data is stored in UK datacentres</p>
+<p>•   Data is encrypted in transit</p>
+<p>•   Access to management facilities requires username/password and/or SSH certificates</p>
+<p>•   Environments can be deleted immediately by the user. All client-related data will be deleted by Temenos 60 days 
+after the termination of the agreement</p>
 <p><br></p>
               <hr>
               
