--- a/docfx_project/site/home/overview.html
+++ b/docfx_project/site/home/overview.html
@@ -81,60 +81,42 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="what-is-temenos-continuous-deployment"><strong>What is Temenos Continuous Deployment?</strong></h2>
 
-<p>Temenos Continuous Deployment is a cloud based infrastructure used during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand, unless otherwise stated. Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allows you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
-<p>Temenos Continuous Deployment is an offering that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software – either fully deployed and supported by Temenos SaaS or utilising the client’s own cloud infrastructure.</p>
+<p>Temenos Continuous Deployment (TCD) is an offering from Temenos SaaS that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software – either fully deployed and supported by Temenos SaaS or utilising the client’s own cloud infrastructure. </p>
+<p>Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity. </p>
 <p><img src="images/cloud-offering.png" alt=""></p>
 <h2 id="temenos-continuous-deployment"><strong>Temenos Continuous Deployment</strong></h2>
 <p><img src="images/tcd.png" alt=""></p>
 <p><img src="images/tcd-details.png" alt=""></p>
 <h2 id="what-is-the-assemble-service-module-of-the-temenos-continuous-deployment"><strong>What is the “Assemble” service module of the Temenos Continuous Deployment?</strong></h2>
-<p>“Assemble” service module provides a DevOps solution to perform continuous integration and delivery of Temenos Products and customisation, thereby enabling faster time to market for features.</p>
-<p>The Assemble service module of Temenos Continuous Deployment is used during the continuous integration (“CI”) and continuous delivery (“CD”) of Temenos solutions. The Assemble service module can accelerate the pace of change and increase confidence in the software deliveries by managing the Assemble of Components (updates, main release, and Level 3 developments), the provisioning into testing Environments, the execution of tests scripts, and providing detailed dashboards of the results. This Assemble service module further allows the Client to configure Products and Releases which match their own specific needs. The main objective being to streamline ongoing change and accelerate implementation / upgrade projects.</p>
+<p>“Assemble” module provides a DevOps solution to perform continuous integration and delivery of Temenos Products, its customisation and thereby enabling faster time to market. </p>
+<p>The Assemble service module can accelerate the pace of change and increase confidence in the software deliveries by managing the Assemble of Components (updates, main release, and Level 3 developments), the provisioning into testing Environments, the execution of tests scripts, and providing detailed dashboards of the results. This Assemble service module further allows the Client to configure Products and Releases, which match their own specific needs. The main objective being to streamline ongoing change and accelerate implementation / upgrade projects. </p>
+<h2 id="what-is-the-extend-service-module-of-the-temenos-continuous-deployment"><strong>What is the “Extend” service module of the Temenos Continuous Deployment?</strong></h2>
+<p>The Extend module of the Temenos Continuous Deployment is used by the ‘change the bank’ teams for self-service management of Environments and provides access to the tools for enhancing Temenos solutions. The TCD portal enables authorised users to provision Environments from a list of Templates. These Environments are for non-production use during development, test, integration, implementation phases. </p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
 <p><strong>Self-service environment provisioning</strong></p>
 <ul>
-<li>An authenticated user, e.g. a developer or tester, has the ability to request an environment from the catalogue of <a href="temenos-cloud-templates.html">templates</a>; this template will be materialised into compute, storage, and networks on the Temenos SaaS See <a href="architecture.html">architecture</a>. The  administrator, e.g. the project manager, is in  control of number of the users and maximum number of running environments, thus having total control of the platform and its usage.</li>
+<li>An authenticated user, e.g. a developer or tester, has the ability to request an environment from the catalogue of templates; this template will be materialised into compute, storage, and networks on the Temenos SaaS. See architecture. The administrator, e.g. the project manager, is in control of number of the users and maximum number of running environments, thus having total control of the platform and its usage. </li>
 </ul>
 <p><strong>Secure configuration and environment management</strong></p>
 <ul>
-<li>A developer, is able to configure a personal SSH Key on their user profile and use this key to securely push changes over SSH.  Deployment of change into the environment is fully automated for configuration, updates, plugins, add-ons and data.  These changes can be stored in a software configuration management repository and deployed to the environment via a Continuous Integration / Continuous Deployment process.</li>
+<li>A developer, is able to configure a personal SSH Key on their user profile and use this key to securely push changes over SSH. Deployment of change into the environment is fully automated for configuration, updates, plugins, add-ons and data. These changes can be stored in a software configuration management repository and deployed to the environment via a Continuous Integration / Continuous Deployment process. </li>
 </ul>
 <p><strong>Controlling the environment</strong></p>
 <ul>
-<li><p>A user is able to scale up, scale down, start, stop, delete, and export data from an environment.  Furthermore, a user is able to push a database into the configuration repository and rebuild the environment, thereby refreshing the database back to that point in time and re-apply transactions and configuration as required. </p>
+<li><p>A user is able to start, stop, delete, and export data from an environment. Furthermore, a user is able to push a database into the configuration repository and rebuild the environment, thereby refreshing the database back to that point in time and re-apply transactions and configuration as required. </p>
 </li>
-<li><p>As an example, a developer or a tester can load a database and collaborate to validate changes and test cases in a shared environment. Should these users need to delete or migrate an environment, they can export the data, create a fresh environment with the latest release, upload the data and continue working all managed through the portal.  When development activity requires additional resources, the users can easily scale up the environments and equally reduce capacity or stop it entirely.</p>
+<li><p>As an example, a developer or a tester can load a database and collaborate to validate changes and test cases in a shared environment. Should these users need to delete or migrate an environment, they can export the data, create a fresh environment with the latest release, upload the data and continue working all managed through the portal.  </p>
 </li>
 </ul>
 <p><strong>Monitoring the environment</strong></p>
 <ul>
-<li>A user can export the application log data, monitor the status of the environments (started, starting, stopped, stopping, rebuilding), and see the results of any application deployments.</li>
+<li>A user can export the application log data, monitor the status of the environments (started, starting, stopped, stopping, rebuilding), and see the results of any application deployments. </li>
 </ul>
 <p><strong>Controlling the application</strong></p>
 <ul>
-<li>The Temenos core banking template exposes endpoints for the user interface and TAFJEE management screens that allows a user to control COB job services.</li>
+<li>The Temenos core banking template exposes endpoints for the user interface and TAFJEE management screens that allows a user to control COB job services. </li>
 </ul>
-<h2 id="managed-resources">Managed Resources</h2>
-<hr>
-<p><strong>Users</strong></p>
-<p>Each user has their own profile within an Organisation.</p>
-<p>Please check <a href="users.html"><strong>here</strong></a> more details about Users.</p>
-<p><strong>Environments</strong></p>
-<p>An environment is an instance of an application and the platform provides the facilities to manage the application configuration.</p>
-<p><strong>Organisations</strong></p>
-<p>The users of the platform can provision and manage the environments within their Organisation.</p>
-<p>Please check <a href="techguides/environment-creation-in-paas.html"><strong>here</strong></a> for more details about Temenos SaaS management of Organisations and Environments.</p>
-<p><strong>Templates</strong></p>
-<p>Environments can be provisioned using a variety of pre-defined application, processing, storage, network, and operating system configurations. Please check <a href="temenos-cloud-templates.html"><strong>here</strong></a> for more details. </p>
-<h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
-<hr>
-<p>The Temenos Continuous Deployment is for <strong>non-production use only</strong>, unless otherwise stated.  No &#39;personal data&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data should be stored on any Environment.</p>
-<p>•   Data is stored in UK datacentres</p>
-<p>•   Data is encrypted in transit</p>
-<p>•   Access to management facilities requires username/password and/or SSH certificates</p>
-<p>•   Environments can be deleted immediately by the user. All client-related data will be deleted by Temenos 60 days 
-after the termination of the agreement</p>
 <p><br></p>
               <hr>
               
