--- a/home/techguides/create-user-role.html
+++ b/home/techguides/create-user-role.html
@@ -83,8 +83,8 @@
 
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
 The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
-<p><img src="images/create-user-role.png" alt="user"></p>
-<p>The admin can select which permissions to set to each user.
+<p><img src="images/create-user-role.png" alt="user"> </p>
+<p>From this window the admin can select which permissions to enable to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
 <p>Once the role is created, the admin can assign it to a specific user:</p>
 <ul>
