--- a/home/techguides/customize-templates.html
+++ b/home/techguides/customize-templates.html
@@ -100,7 +100,7 @@
 </div>
 <h2 id="repository-structure-after-boost">Repository structure after Boost</h2>
 <p>As stated above, the Boost operation will make changes to environment repository. The difference between the before and after boost environment repository versions is represented by the presence of <span style="color:red">environments</span> folder, as it can be observed bellow.</p>
-<p>Please check also the following <a href="use-gitlab-repository.html" target="blank"><strong>user guide</strong></a> to see how to clone an environment locally and see the below repository structure.
+<p>If you want to keep the initial settings of your environment, it is advised to clone the environment and do the changes. Please check the following <a href="use-gitlab-repository.html" target="blank"><strong>user guide</strong></a> to see how to clone an environment locally and get familiar with the below repository structure.
 <br></p>
 <p><img src="images/customize-templates-after-boost.png" alt="boost 4"></p>
 <p>The structure of the <span style="color:red">environments</span> folder is represented by 4 folders <em>(found under common folder)</em>:</p>
