--- a/home/toc.html
+++ b/home/toc.html
@@ -114,7 +114,7 @@
                           <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
                         </li>
                         <li>
-                          <a href="techguides/make-updates-cloud.html" name="" title="Make Updates on Cloud Environment">Make Updates on Cloud Environment</a>
+                          <a href="./techguides/make-updates-cloud.md" name="" title="Make Updates on Cloud Environment">Make Updates on Cloud Environment</a>
                         </li>
                         <li>
                           <a href="techguides/customize-templates.html" name="" title="Customize templates">Customize templates</a>
